--- a/Assignment-5/assignment-5.ipynb
+++ b/Assignment-5/assignment-5.ipynb
@@ -109,7 +109,9 @@
     "plt.xlabel('Iteration')\n",
     "plt.ylabel('Cost')\n",
     "plt.grid(True)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# https://chatgpt.com/share/68178187-d980-8009-9e32-b0f7685dc6ff"
    ]
   }
  ],
